# rugiet

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.sh
.claude/agents/: lifecycle-creative.md
.claude/skills/rugiet-copywriting/: SKILL.md
.claude/skills/rugiet-copywriting/references/: compliance.md  owned-channels.md  tone-of-voice.md
.claude/skills/rugiet-design-system/: SKILL.md
braze/iam/: README.md  carousel.html  tokens.css
briefs/: _template.md
docs/: RUGIET_LTV_IMPLEMENTATION_PLAN.md
reference/: decisions.md
scripts/: evaluate.py  train.py
src/rugiet_ltv/: __init__.py
src/rugiet_ltv/data/: __init__.py  loaders.py  schemas.py  synthetic.py  validators.py
src/rugiet_ltv/evaluation/: __init__.py  backtest.py  metrics.py
src/rugiet_ltv/explainability/: __init__.py
src/rugiet_ltv/features/: __init__.py  acquisition.py  demographics.py  encoding.py  intake.py  pipeline.py  purchase.py  registry.py  spine.py  survival.py  targets.py
src/rugiet_ltv/models/: __init__.py  base.py  lightgbm_model.py
src/rugiet_ltv/models/survival/: __init__.py
src/rugiet_ltv/models/ziln/: __init__.py
src/rugiet_ltv/serving/: __init__.py
src/rugiet_ltv/utils/: __init__.py  config.py  constants.py  logging.py
tests/: test_backtest.py  test_pipeline_integration.py  test_spine_targets.py  test_survival_benchmark.py
