[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rugiet-ltv"
version = "0.1.0"
description = "Rugiet contribution-margin LTV prediction at first purchase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pandera>=0.18",
    "pydantic>=2.5",
    "lightgbm>=4.3",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "shap>=0.44",
]

[project.optional-dependencies]
survival = ["pymc-marketing>=0.9"]
tracking = ["optuna>=3.5", "mlflow>=2.10"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "types-PyYAML",
    "pandas-stubs>=2.2",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["rugiet_ltv"]

[[tool.mypy.overrides]]
module = ["lightgbm", "shap", "pymc_marketing.*", "mlflow.*", "pandera.*", "joblib"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rugiet_ltv.data.schemas"]
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
